# data-pipeline-api-gateway

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_indexes.py
scripts/: seed.py
src/api/: main.py
src/api/v1/routes/: diagnostics.py  health.py  vehicles.py
src/api/v1/schemas/: common.py  diagnostics.py  vehicles.py
src/core/: cache.py  config.py  database.py  logging.py  rate_limit.py
src/repositories/: diagnostics.py  vehicles.py
src/tasks/: background.py
tests/: conftest.py  test_cache.py  test_database.py  test_diagnostics.py  test_health.py  test_pagination.py  test_rate_limit.py  test_repositories.py  test_vehicles.py
